examples/test/testpolicy5973.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5973
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key30: value47
      key1: value0
      key11: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value8
      podSelector:
        matchLabels:
          key12: value39
